tests/init/tlet_uninit2.nim
discard """
  errormsg: "'let' symbol requires an initialization"
"""

let x: int